--- a/index.pug
+++ b/index.pug
@@ -4,16 +4,20 @@ html(lang="ru")
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device=width, initial-scale=1")
 		meta(http-equiv="X-UA-Compatible" content="ie=edge")
-		meta(name="author" content="Master Vision")
-		meta(name="description" content=" «»")
-		meta(property="og:image" content="")
-		title «»
+		meta(property="og:type" content="website")
+		meta(property="og:url" content="ask-extrasense.mastervision.su")
+		meta(property="og:title" content="Вопрос экстрасенсу")
+		meta(property="og:description" content="Задайте вопрос экстрасенсу в прямом эфире")
+		title Задайте вопрос экстрасенсу в прямом эфире
 		link(rel="icon" type="image/x-icon" href="favicon.ico")
 		link(rel="shortcut icon" type="image/x-icon" href="favicon.png")
-		link(rel="stylesheet" href="css/bootstrap.min.css")
 		link(rel="stylesheet" href="css/styles.css")
 		script 
 			| !function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?158",t.onload=function(){VK.Retargeting.Init("VK-RTRG-11201-hHU9b"),VK.Retargeting.Hit()},document.head.appendChild(t)}();
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		script(async src="https://www.googletagmanager.com/gtag/js?id=UA-130434463-1")
+		script
+			| window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-130434463-1');
 	body
 		noscript
 			img(src="https://vk.com/rtrg?p=VK-RTRG-11201-hHU9b" style="position:fixed; left:-999px;" alt="")
@@ -24,9 +28,102 @@ html(lang="ru")
 			div
 				img(src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt="")
 		<!-- /Yandex.Metrika counter -->
+		section#main
+			.container
+				include pug/header
+				h1.main_title Хотите задать вопрос экстрасенсу и получить ответ?
+				h2.main_subtitle Задайте вопрос в прямом эфире 
+					span сегодня в 17:00 мск
+				button.button(data-toggle="modal" data-target="#myModalForm") Задать вопрос
+		section#requests
+			.container
+				h3.requests_title Примеры запросов
+				ul.requests_list
+					li Не получается заработать достаточно денег на жизнь
+					li Не могу избавиться от болезни. Лекарства не помогают
+					li Плохие отношения с мужем
+					li Хочу родить ребёнка, но не получается забеременеть
+					li Хочу помочь мужу избавиться от алкоголизма
+					li Хочу найти своё предназначение
+				button.button(data-toggle="modal" data-target="#myModalForm") Записаться
+		footer#footer
+			.container
+				p ИП Кудряшов Александр Анатольевич, Тюмень, проезд Летний, 9а, ИНН 720410077658, ОГРН 315723200065100
+		.modal.fade(tabindex="-1" role="dialog")#myModalForm
+			.modal-dialog(role="document")
+				.modal-content.mail_modal-content
+					.modal-wrapper
+						button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+							span(aria-hidden="true") &times;
+						.modal-body
+							form(action="https://aleksandrkudryashov1.autoweboffice.ru/?r=personal/newsletter/sub/add&id=3568&lg=ru" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" ).form_newsletter
+								h3.mail_section_title Задайте экстрасенсу вопрос в прямом эфире
+								h4.mail_subtitle Эфир сегодня в 17:00 мск!
+								.form_container
+									.email-block
+										input( type="hidden" value="1" name="required_fields[email]")
+										input(class="mail" name="Contact[email]" type="text" placeholder="Ваш email")
+									button(type="submit").button.button_mail Записаться
+								.clearfix
+								p.alert_message Введите почту
+								<!--Обязательный параметр. Не удалять и не изменять!-->
+								input(type="hidden" value="511" name="Contact[id_newsletter]")
+								<!--API код канала рекламы-->
+								input(type="hidden" value="Вопрос экстрасенсу онлайн" name="Contact[id_advertising_channel_page]")
+								.checking
+									input(type="checkbox" id="check_m" checked).check
+									label(for="check_m").check_label Я согласен с 
+										a(href="javascript:void(0);")(data-toggle="modal" data-target="#myPolitics")  условиями обработки персональных данных
+										|  по 152 - Ф3
+		.modal.fade(tabindex="-1" role="dialog")#myPolitics
+			.modal-dialog(role="document")
+				.modal-content.politics_modal-content
+					.modal-wrapper
+						.modal-header
+							button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+								span(aria-hidden="true") &times;
+							h4.modal-title Политика конфиденциальности
+								small (Обновлено 25.05.2018)
+						.modal-body
+							p Настоящая Политика конфиденциальности персональной информации (далее — Политика) действует в отношении всей информации, которую ООО «Master Vision» и/или его аффилированные лица, могут получить о пользователе во время использования им любого из сайтов, сервисов, служб, программ и продуктов ООО «Master Vision» (далее — Сервисы).
+							p Использование Сервиса означает безоговорочное согласие пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями пользователь должен воздержаться от использования Сервиса.
+							p 1. Персональная информация пользователей, которую получает и обрабатывает ООО «Master Vision»
+							p 1.1. В рамках настоящей Политики под «персональной информацией пользователя» понимаются:
+							p 1.1.1. Персональная информация, которую пользователь предоставляет о себе самостоятельно при регистрации (создании учётной записи) или в процессе использования Сервиса, включая персональные данные пользователя. Обязательная для предоставления Сервиса (оказания услуг) информация помечена специальным образом. Иная информация предоставляется пользователем на его усмотрение.
+							p 1.1.2 Данные, которые автоматически передаются Сервису в процессе их использования с помощью установленного на устройстве пользователя программного обеспечения, в том числе IP-адрес, информация из cookie, информация о браузере пользователя (или иной программе, с помощью которой осуществляется доступ к Сервису), время доступа, адрес запрашиваемой страницы.
+							p 1.1.3 Иная информация о пользователе, сбор и/или предоставление которой определено в Регулирующих документах отдельных Сервисов.
+							p 1.2. Настоящая Политика применима только к Сервису ООО «Master Vision». ООО «Master Vision» не контролирует и не несет ответственность за сайты третьих лиц, на которые пользователь может перейти по ссылкам, доступным на сайтах ООО «Master Vision», в том числе в результатах поиска. На таких сайтах у пользователя может собираться или запрашиваться иная персональная информация, а также могут совершаться иные действия.
+							p 1.3. ООО «Master Vision» в общем случае не проверяет достоверность персональной информации, предоставляемой пользователями, и не осуществляет контроль за их дееспособностью. Однако ООО «Master Vision» исходит из того, что пользователь предоставляет достоверную и достаточную персональную информацию по вопросам, предлагаемым в форме регистрации, и поддерживает эту информацию в актуальном состоянии.
+							p 2. Цели сбора и обработки персональной информации о пользователе
+							p 2.1. ООО «Master Vision» собирает и хранит только те персональные данные, которые необходимы для предоставления Сервиса и оказания услуг (исполнения соглашений и договоров с пользователем).
+							p 2.2. Персональную информацию пользователя ООО «Master Vision» может использовать в следующих целях:
+							p 2.2.1. Идентификация стороны в рамках соглашений и договоров с ООО «Master Vision»;
+							p 2.2.2. Предоставление пользователю персонализированных Сервисов;
+							p 2.2.3. Связь с пользователем, в том числе направление уведомлений, запросов и информации, касающихся использования Сервиса, оказания услуг, а также обработка запросов и заявок от пользователя;
+							p 2.2.4. Улучшение качества Сервиса, удобства их использования, разработка новых Сервисов и услуг;
+							p 2.2.5. Таргетирование рекламных материалов;
+							p 2.2.6. Проведение статистических и иных исследований на основе обезличенных данных.
+							p 3. Условия обработки персональной информации пользователя и её передачи третьим лицам
+							p 3.1. ООО «Master Vision» хранит персональную информацию пользователей в соответствии с внутренними регламентами конкретных сервисов.
+							p 3.2. В отношении персональной информации пользователя сохраняется ее конфиденциальность, кроме случаев добровольного предоставления пользователем информации о себе для общего доступа неограниченному кругу лиц. При использовании отдельных Сервисов пользователь соглашается с тем, что определённая часть его персональной информации становится общедоступной.
+							p 3.3. ООО «Master Vision» вправе передать персональную информацию пользователя третьим лицам в следующих случаях:
+							p 3.3.1. Пользователь выразил свое согласие на такие действия;
+							p 3.3.2. Передача необходима в рамках использования пользователем определенного Сервиса либо для оказания услуги пользователю;
+							p 3.3.3. Передача предусмотрена российским или иным применимым законодательством в рамках установленной законодательством процедуры;
+							p 3.3.4. Такая передача происходит в рамках продажи или иной передачи бизнеса (полностью или в части), при этом к приобретателю переходят все обязательства по соблюдению условий настоящей Политики применительно к полученной им персональной информации;
+							p 3.3.5. В целях обеспечения возможности защиты прав и законных интересов ООО «Master Vision» или третьих лиц в случаях, когда пользователь нарушает Пользовательское соглашение сервиса.
+							p 3.4. При обработке персональных данных пользователей ООО «Master Vision» руководствуется Федеральным законом РФ «О персональных данных».
+							p 4. Изменение пользователем персональной информации
+							p 4.1. Пользователь может в любой момент изменить (обновить, дополнить) предоставленную им персональную информацию или её часть, а также параметры её конфиденциальности, воспользовавшись функцией редактирования персональных данных в персональном разделе соответствующего Сервиса.
+							p 4.2. Пользователь также может удалить предоставленную им в рамках определенной учетной записи персональную информацию, воспользовавшись функцией «Отписаться от рассылки» в персональном разделе соответствующего Сервиса При этом удаление аккаунта может повлечь невозможность использования некоторых Сервисов.
+							p 5. Меры, применяемые для защиты персональной информации пользователей ООО «Master Vision» принимает необходимые и достаточные организационные и технические меры для защиты персональной информации пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий с ней третьих лиц.
+							p 6. Изменение Политики конфиденциальности. Применимое законодательство
+							p 6.1. ООО «Master Vision» имеет право вносить изменения в настоящую Политику конфиденциальности. При внесении изменений в актуальной редакции указывается дата последнего обновления. Новая редакция Политики вступает в силу с момента ее размещения, если иное не предусмотрено новой редакцией Политики. Действующая редакция всегда находится на странице по адресу http://mastervision.su/confidential/.
+							p 6.2. К настоящей Политике и отношениям между пользователем и ООО «Master Vision», возникающим в связи с применением Политики конфиденциальности, подлежит применению право Российской Федерации.
+							p 7. Обратная связь. Вопросы и предложения
+							p Все предложения или вопросы по поводу настоящей Политики следует сообщать в Службу поддержки пользователей Mastervision (info@mastervision.su)
 		include pug/scripts
 		<!--BEGIN JIVOSITE CODE-->
 		//script
 			| (function() {var widget_id = 'cMdj5UfoZX';var s = document.createElement('script');s.type = 'text/javascript';s.async = true;s.src = '//code.jivosite.com/script/widget/' + widget_id;var ss = document.getElementsByTagName('script')[0];ss.parentNode.insertBefore(s, ss);})();
 		<!--END JIVOSITE CODE-->
-		iframe(name="results" style="display:none;")
