--- a/styl/styles.styl
+++ b/styl/styles.styl
@@ -1,8 +1,86 @@
+@font-face {
+	font-family: 'OpenSans';
+	src: url('../fonts/OpenSans.eot');
+	src: url('../fonts/OpenSans.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSans.woff2') format('woff2'),
+		 url('../fonts/OpenSans.woff') format('woff'),
+		 url('../fonts/OpenSans.ttf') format('truetype'),
+		 url('../fonts/OpenSans.svg#OpenSans') format('svg');
+	font-display: fallback;
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'OpenSansBold';
+	src: url('../fonts/OpenSansBold.eot');
+	src: url('../fonts/OpenSansBold.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSansBold.woff2') format('woff2'),
+		 url('../fonts/OpenSansBold.woff') format('woff'),
+		 url('../fonts/OpenSansBold.ttf') format('truetype'),
+		 url('../fonts/OpenSansBold.svg#OpenSansBold') format('svg');
+	font-display: fallback;
+	font-weight: bold;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'OpenSansCondensedBold';
+	src: url('../fonts/OpenSansCondensedBold.eot');
+	src: url('../fonts/OpenSansCondensedBold.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSansCondensedBold.woff2') format('woff2'),
+		 url('../fonts/OpenSansCondensedBold.woff') format('woff'),
+		 url('../fonts/OpenSansCondensedBold.ttf') format('truetype'),
+		 url('../fonts/OpenSansCondensedBold.svg#OpenSansCondensedBold') format('svg');
+	font-display: fallback;
+	font-weight: 900;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'OpenSansCondensedLight';
+	src: url('../fonts/OpenSansCondensedLight.eot');
+	src: url('../fonts/OpenSansCondensedLight.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSansCondensedLight.woff2') format('woff2'),
+		 url('../fonts/OpenSansCondensedLight.woff') format('woff'),
+		 url('../fonts/OpenSansCondensedLight.ttf') format('truetype'),
+		 url('../fonts/OpenSansCondensedLight.svg#OpenSansCondensedLight') format('svg');
+	font-display: fallback;
+	font-weight: 100;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'OpenSansLight';
+	src: url('../fonts/OpenSansLight.eot');
+	src: url('../fonts/OpenSansLight.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSansLight.woff2') format('woff2'),
+		 url('../fonts/OpenSansLight.woff') format('woff'),
+		 url('../fonts/OpenSansLight.ttf') format('truetype'),
+		 url('../fonts/OpenSansLight.svg#OpenSansLight') format('svg');
+	font-display: fallback;
+	font-weight: 100;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'OpenSansSemibold';
+	src: url('../fonts/OpenSansSemibold.eot');
+	src: url('../fonts/OpenSansSemibold.eot') format('embedded-opentype'),
+		 url('../fonts/OpenSansSemibold.woff2') format('woff2'),
+		 url('../fonts/OpenSansSemibold.woff') format('woff'),
+		 url('../fonts/OpenSansSemibold.ttf') format('truetype'),
+		 url('../fonts/OpenSansSemibold.svg#OpenSansSemibold') format('svg');
+	font-display: fallback;
+	font-weight: 600;
+	font-style: normal;
+}
+
+@import '../_dev/css/bootstrap.min.css'
+
 *
 	margin 0
 	padding 0
 	outline none
-
+body
+	font-family: 'OpenSans', sans-serif;
+	font-size: 16px
+	background-color rgba(159,196,225,.2)
 a
 	color: #fefefe
 	&:focus
@@ -44,3 +122,433 @@ button
 		right 0
 		bottom 0
 		cursor pointer
+.button
+	display block
+	margin 0 auto
+	width 100%
+	max-width 240px
+	border-radius: 10px;
+	background-color: #f2c22c
+	height: 60px;
+	line-height: 60px;
+	font-size: 15px;
+	font-family: "OpenSansBold", sans-serif;
+	color: #11191b
+	text-align: center;
+	cursor pointer
+	text-transform: uppercase
+	transition: all .2s ease-in-out
+	&:focus
+		color #11191b
+		background-color: #f2c22c
+		text-decoration: none 
+	&:hover
+		color #ffffff
+		background-color: #11191b
+		text-decoration: none
+		box-shadow: 0 0 10px 5px rgba(#fff, .5)
+#main
+#main_thanks
+	width 100%
+	padding 0 0 90px
+	background-color: #052553
+	background-image url(../img/main_bg.jpg)
+	background-repeat no-repeat
+	background-position: center
+	background-size: cover
+	position relative
+	&:before
+		content: ''
+		display block
+		position: absolute
+		width 100%
+		height 100%
+		top 0
+		left 0
+		bottom 0
+		right 0
+		background-color: rgba(#000, .8)
+		z-index 0
+	.container
+		position relative
+		z-index: 9
+#main_thanks
+	background-image: none
+	min-height calc(100vh - 78px)
+#header
+	padding: 14px 0
+	overflow hidden
+	z-index: 9
+	position relative
+	margin-bottom: 40px
+#logo
+	float: left
+	width 165px
+	height auto
+.contacts
+	float: right
+	text-align: right
+	line-height  22px
+	a
+		&:focus
+			text-decoration: none
+		i
+			color: #eec33f
+			font-size: 15px
+			margin: 0 10px 0 25px
+			line-height: 15px
+			vertical-align: baseline
+		i+span
+			line-height: 15px
+			font-size: 15px;
+			font-family: "OpenSansLight", sans-serif;
+			color: rgba(#fff)
+			opacity .8
+			text-align: right;
+			&:hover
+				text-decoration underline
+.tel:first-child
+	.fa-phone
+		margin-left: 0
+.main_title
+	margin 0 auto 40px
+	font-size: 42px
+	font-family: 'OpenSansBold', sans-serif
+	text-align: center
+	width 100%
+	max-width 710px
+	color #fff
+.main_subtitle
+	margin 0 auto 60px
+	font-size: 32px
+	font-family: 'OpenSans', sans-serif
+	text-align: center
+	width 100%
+	max-width 710px
+	color #fff
+	span
+		display block
+		color #ffb21e
+		font-family: 'OpenSansCondensedBold', sans-serif
+.thanks_main_subtitle
+	max-width 100%
+#requests
+	width 100%
+	padding 90px 0
+	min-height calc(100vh - 630px)
+.requests_title
+	color #ffb21e
+	font-family: 'OpenSansCondensedBold', sans-serif
+	margin 0 auto 40px
+	font-size: 32px
+	text-align: center
+.requests_list
+	width 100%
+	max-width 560px
+	margin 0 auto 60px
+	li
+		position relative
+		list-style: none
+		font-size: 20px
+		margin-bottom: 20px
+		line-height: 1.4
+		padding-left: 22px
+		&:before
+			content: ''
+			display block
+			width: 8px
+			height 8px
+			border-radius: 2px
+			position: absolute
+			left 0
+			top: 11px
+			box-shadow: 0 0 5px 0 rgba(#000, .35)
+			background-color: #ffb21e
+#footer
+	width 100%
+	padding 30px 0
+	background-color: #12181b
+	text-align: center
+	p
+		font-size: 14px;
+		color: rgba(#fefefe, .6);
+		line-height: 1.3;
+		font-family: 'OpenSansLight', sans-serif
+.mail_modal-content
+	background-color: #fff
+button.close
+	position absolute
+	width: 35px
+	height 35px
+	border-radius: 50px
+	line-height: 35px
+	text-align: center
+	font-size: 30px
+	color: #000
+	background-color: #F0F0F0
+	top 15px
+	right 15px
+	left auto
+	z-index 99
+.modal_mail_section_title
+	margin 20px 0 15px
+	text-align: center
+.modal_mail_subtitle
+	font-size: 20px
+	margin-bottom: 20px
+.modal_soc_buttons_mail_title
+	margin-top: 20px
+.politics_modal-content
+	.modal-title
+		font-size: 24px
+		text-align: left 
+		small
+			display: block
+	p
+		font-size: 16px
+		margin-bottom: 15px
+.modal-backdrop.in
+	opacity .8
+.mail_modal-content
+	background-color: #04224A
+.mail_section_title
+	margin: 0 auto 20px
+	color #ffffff
+	font-family: 'OpenSansCondensedBold', sans-serif
+	font-size: 28px
+	text-align: center
+	width 100%
+	max-width 58%
+.mail_subtitle 
+	color #ffb21e
+	font-size: 22px
+	text-align: center
+.mail
+	border-radius: 5px
+	border: 1px solid #e8e8e8
+	height 51px
+	line-height: 51px
+	padding-left:  20px
+	color: rgba(24, 24, 24, 0.6);
+	width 100%
+	max-width 252px
+	margin 20px auto
+	font-family: 'OpenSans', sans-serif
+	display block
+	&:focus
+	&:active
+		background-color #fff
+.button_mail 
+	max-width: 252px;
+	height: 51px;
+	line-height: 51px;
+.alert_message {
+	display: none;
+	text-align: center;
+	font-size: 16px;
+	padding-top: 10px;
+	font-family: 'OpenSansLight', sans-serif;
+	color: #ff0000
+}
+.checking {
+	display: table;
+	width 100%
+	max-width: 80%
+	margin: 25px auto 0;
+	text-align: left
+}
+
+.checking .check_label {
+	font-size: 12px;
+	font-family: "OpenSansLight", sans-serif;
+	color: #fff
+	line-height: 14px;
+	cursor: pointer;
+	position: relative;
+	display: table-cell;
+	vertical-align: middle;
+	padding: 0 0 0 25px;
+	text-align: left
+}
+
+.checking .check_label a {
+	text-decoration: underline
+	color #fff
+}
+.checking .check_label a:focus
+	opacity: 1
+	color #fff
+.checking .check_label a:hover
+	opacity: .6
+	color #fff
+.checking .check_label:before {
+	content: '';
+	background-color: #aaa;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 14px;
+	height: 14px;
+
+}
+
+.checking .check_label:after {
+	content: '';
+	position: absolute;
+	left: 5px;
+	top: 2px;
+	width: 5px;
+	height: 10px;
+	background-color: transparent;
+	opacity: 0;
+	border-bottom: 3px solid #1f2022
+	border-right: 3px solid #1f2022
+	-webkit-transform: rotate(41deg);
+	-ms-transform: rotate(41deg);
+	transform: rotate(41deg);
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+
+}
+
+.check {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	width: 0;
+	height 0;
+	border: 0;
+	left -99999px;
+}
+
+.check:checked + label:before {
+	border: none
+	background-color: #f6f5f5
+
+}
+
+.check:checked + label:after {
+	opacity: 1;
+	top: 2px;
+	-webkit-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+@-webkit-keyframes autofill {
+	to {
+		color: rgba(29, 28, 24, 0.702);
+		background: #fff;
+	}
+}
+
+input:-webkit-autofill {
+	-webkit-animation-name: autofill;
+	-webkit-animation-fill-mode: both;
+
+}
+
+@media screen and (min-width 2295px)
+	.container
+		width 1400px
+	#main
+		padding-bottom: 110px
+		background-position: center -400px
+	#logo
+		width 200px
+	.contacts a i
+	.contacts a i+span
+		font-size: 20px
+		line-height: 20px
+	.button
+		font-size: 20px
+		max-width 300px
+	#header
+		padding 25px 0
+	#header
+	.main_title
+		margin-bottom: 60px
+	.main_subtitle
+		margin-bottom: 90px
+	.requests_title
+		font-size: 40px
+	.requests_list
+		max-width 650px
+		li
+			font-size: 22px
+	footer 
+		padding 40px 0
+	#footer p
+		font-size: 18px
+	#requests
+		min-height calc(100vh - 745px)
+@media screen and (max-width 991px)
+	#logo
+		float: none
+		display block
+		margin: 0 auto 5px
+	.contacts
+		float: none
+		text-align: center
+		a
+			display: inline-block
+	#header
+		margin-bottom: 10px
+	#main
+		padding-bottom: 40px
+	#requests
+		padding 40px 0
+	#footer
+		padding 20px 0
+	#myModalForm
+		.modal-dialog
+			width 100%
+			max-width 600px
+			margin 20px auto
+@media screen and (max-width 640px)
+	#myModalForm
+		.modal-dialog
+			width 100%
+			max-width 96%
+			margin 20px auto
+@media screen and (max-width 485px)
+	#header
+		margin-bottom: 0
+	#logo
+		width 140px
+	.contacts a i
+	.contacts a i + span
+		font-size: 12px
+	.main_title
+	.requests_title
+		font-size: 28px
+		margin 0 0 30px
+	.main_subtitle
+		font-size: 22px
+		margin 0 0 40px
+	#requests
+		padding 30px 0
+	.requests_list
+		margin-bottom: 30px
+		li
+			font-size: 18px
+			margin-bottom: 10px
+			line-height: 1.3
+			padding-left: 15px
+			&:before
+				top 9px
+	#footer p
+		font-size: 12px
+	.mail_section_title
+		font-size: 24px
+		max-width 80%
+		margin-bottom: 20px
+	.mail_subtitle
+		font-size: 18px
+@media screen and (max-width 380px)
+	.main_title
+	.requests_title
+		font-size: 24px
+		line-height: 1.3
+		margin-bottom: 20px
