--- a/thanks.pug
+++ b/thanks.pug
@@ -48,8 +48,23 @@ html(lang="ru")
 							span info@mastervision.su
 				h1.main_title Спасибо!
 				h2.main_subtitle.thanks_main_subtitle Вы записаны на онлайн-встречу с экстрасенсом
-					span Сегодня в 17:00 мск
+					span Сегодня в 17:30 мск
 		footer#footer
 			.container
+				.soc_buttons
+					h5 Хотите узнать больше? Вступайте в наши группы!
+					a(href="https://www.facebook.com/Mastervision1C/" target="_blank")
+						i(class="fa fa-facebook-f")
+					a(href="http://vk.com/mv_ezoterika" target="_blank")
+						i(class="fa fa-vk")
+					a(href="https://twitter.com/MastervisionEzo" target="_blank")
+						i(class="fa fa-twitter")
+					a(href="https://www.instagram.com/mastervision1/" target="_blank")
+						i(class="fa fa-instagram")
+					a(href="https://www.ok.ru/group/54472921710656" target="_blank")
+						i(class="fa fa-odnoklassniki")
+					a(href="https://www.youtube.com/channel/UCiJTdt19jRMRmYyCZac2Lvg/" target="_blank")
+						i(class="fa fa-youtube")
+					.clfix
 				p ИП Кудряшов Александр Анатольевич, Тюмень, проезд Летний, 9а, ИНН 720410077658, ОГРН 315723200065100
 		link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
