--- a/styl/styles.styl
+++ b/styl/styles.styl
@@ -174,7 +174,7 @@ button
 		z-index: 9
 #main_thanks
 	background-image: none
-	min-height calc(100vh - 78px)
+	min-height calc(100vh - 177px)
 #header
 	padding: 14px 0
 	overflow hidden
@@ -269,11 +269,39 @@ button
 	padding 30px 0
 	background-color: #12181b
 	text-align: center
+	h5
+		font-size: 20px;
+		color: rgb(255, 252, 252);
+		line-height: 1.042;
+		margin 0
+		font-family: 'OpenSansBold', sans-serif
 	p
 		font-size: 14px;
-		color: rgba(#fefefe, .6);
-		line-height: 1.3;
-		font-family: 'OpenSansLight', sans-serif
+		color: rgba(254, 254, 254, 0.302);
+		line-height: 1.786;
+.soc_buttons
+	width 100%
+	margin: 0 auto
+	a
+		display: inline-block
+		margin: 20px 13px
+		position relative
+		z-index: 1
+		border-radius: 50px
+		background-color: #F5B334
+		transition: all .3s ease-out
+		i
+			width: 32px;
+			height: 32px;
+			color #12181b
+			font-size 18px
+			line-height 32px
+			position relative
+			z-index 9
+		&:hover
+			background-color: #0e3f66
+			i
+				color #F5B334
 .mail_modal-content
 	background-color: #fff
 button.close
@@ -483,6 +511,15 @@ input:-webkit-autofill {
 		font-size: 18px
 	#requests
 		min-height calc(100vh - 745px)
+	#main_thanks
+		min-height: calc(100vh - 202px);
+	.soc_buttons a i
+		font-size: 24px
+		width 45px
+		height 45px
+		line-height 45px
+	#footer h5
+		font-size: 24px
 @media screen and (max-width 991px)
 	#logo
 		float: none
@@ -506,6 +543,8 @@ input:-webkit-autofill {
 			width 100%
 			max-width 600px
 			margin 20px auto
+	#main_thanks
+		padding-bottom: 40px
 @media screen and (max-width 640px)
 	#myModalForm
 		.modal-dialog
@@ -546,6 +585,13 @@ input:-webkit-autofill {
 		margin-bottom: 20px
 	.mail_subtitle
 		font-size: 18px
+	#footer h5
+		margin-bottom: 10px
+	.soc_buttons a
+		margin 0 8px 10px
+	#main_thanks
+		min-height calc(100vh - 197px)
+		padding-bottom: 30px
 @media screen and (max-width 380px)
 	.main_title
 	.requests_title
