Chat ia added and some edit to rhanks

--- a/index.pug
+++ b/index.pug
@@ -124,6 +124,6 @@ html(lang="ru")
 							p Все предложения или вопросы по поводу настоящей Политики следует сообщать в Службу поддержки пользователей Mastervision (info@mastervision.su)
 		include pug/scripts
 		<!--BEGIN JIVOSITE CODE-->
-		//script
-			| (function() {var widget_id = 'cMdj5UfoZX';var s = document.createElement('script');s.type = 'text/javascript';s.async = true;s.src = '//code.jivosite.com/script/widget/' + widget_id;var ss = document.getElementsByTagName('script')[0];ss.parentNode.insertBefore(s, ss);})();
+		script
+			| (function() {var widget_id = 'PIHNwgdn2a';var s = document.createElement('script');s.type = 'text/javascript';s.async = true;s.src = '//code.jivosite.com/script/widget/' + widget_id;var ss = document.getElementsByTagName('script')[0];ss.parentNode.insertBefore(s, ss);})();
 		<!--END JIVOSITE CODE-->
