--- a/thanks.pug
+++ b/thanks.pug
@@ -47,8 +47,8 @@ html(lang="ru")
 							i.fa.fa-envelope(aria-hidden="true")
 							span info@mastervision.su
 				h1.main_title Спасибо!
-				h2.main_subtitle.thanks_main_subtitle Вы записаны на онлайн-встречу с экстрасенсом
-					span Сегодня в 17:30 мск
+				h2.main_subtitle.thanks_main_subtitle Вы записаны на онлайн-встречу с экстрасенсом, письмо с приглашением, придет к Вам на указанную почту
+					span сегодня в 17:00 мск
 		footer#footer
 			.container
 				.soc_buttons
